--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,10 @@ jobs:
             contents: write
 
         steps:
-            - uses: actions/checkout@v3
+            - name: Checkout
+              uses: actions/checkout@v3
+              with:
+                submodules: 'recursive'
 
             - name: Cache Hugo resources
               uses: actions/cache@v3
@@ -40,10 +43,12 @@ jobs:
             - name: Build
               run: hugo --minify --gc
 
-            - name: Deploy 🚀
-              uses: JamesIves/github-pages-deploy-action@v4
+            - name: Deploy to Nginx
+              uses: appleboy/scp-action@master
               with:
-                  branch: gh-pages
-                  folder: public
-                  clean: true
-                  single-commit: true
+                host: ${{ secrets.SERVER_IP }}
+                username: ${{ secrets.SSH_USERNAME }}
+                key: ${{ secrets.SSH_PRIVATE_KEY }}
+                port: 22
+                source: "public/"
+                target: ${{ DEPLOY_PATH }}
