--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,6 +43,12 @@ jobs:
             - name: Build
               run: hugo --minify --gc
 
+            - name: Cleanup Target Folder
+              run: |
+                ssh ${{ secrets.SSH_USERNAME }}@${{ secrets.SERVER_IP }} 'rm -rf ${{ vars.DEPLOY_PATH }}'
+              env:
+                SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+
             - name: Deploy to Nginx
               uses: appleboy/scp-action@master
               with:
@@ -50,5 +56,5 @@ jobs:
                 username: ${{ secrets.SSH_USERNAME }}
                 key: ${{ secrets.SSH_PRIVATE_KEY }}
                 port: 22
-                source: "public/"
+                source: "public/*"
                 target: ${{ vars.DEPLOY_PATH }}
