--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -3,6 +3,7 @@ baseurl = "https://demo.stack.jimmycai.com"
 languageCode = "zh-cn"
 paginate = 5
 title = "Gaein nidb 的博客"
+timeZone = "Asia/Shanghai"
 
 # Theme i18n support
 # Available values: en, fr, id, ja, ko, pt-br, zh-cn, zh-tw, es, de, nl, it, th, el, uk, ar
