--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -1,7 +1,6 @@
 # Change baseurl before deploy
 baseurl = "https://demo.stack.jimmycai.com"
 languageCode = "zh-cn"
-paginate = 5
 title = "Gaein nidb 的博客"
 timeZone = "Asia/Shanghai"
 
@@ -15,3 +14,6 @@ hasCJKLanguage = true
 
 # Change it to your Disqus shortname before using
 disqusShortname = "hugo-theme-stack"
+
+[pagination]
+pagerSize = 20
